# iglo

./: .gitignore  CLAUDE.md  LICENSE  README.md  copy_iglo_db_prod_to_dev.sh  get_season_participant_emails.py  pyproject.toml  setup_dev.sh
.github/workflows/: deploy.yml  test.yml  tests.yml
deploy/: Dockerfile  build.sh  deploy.sh  docker-compose.yml  run.sh  scheduler.sh  start.sh  web.sh  worker.sh
fixtures/: pg-production.dump  seasons.json
iglo/: manage.py
iglo/accounts/: admin.py  factories.py  forms.py  models.py  texts.py  urls.py  views.py
iglo/accounts/migrations/: 0001_initial.py  0002_user_created.py  0003_user_roles.py  0004_alter_user_roles.py
iglo/iglo/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
iglo/league/: admin.py  api.py  apps.py  exceptions.py  forms.py  handlers.py  ielo.py  igor.py  models.py  permissions.py  tasks.py  texts.py  urls.py  utils.py  views.py
iglo/league/migrations/: 0001_initial.py  0002_auto_20211105_1055.py  0003_player_auto_join.py  0004_auto_20211105_1652.py  0005_auto_20211106_0747.py  0006_group_type.py  0007_alter_season_state.py  0008_alter_game_points_difference.py  0009_game_updated.py  0010_add_bye_games.py  0011_auto_20211121_1449.py  0012_auto_20211123_2048.py  0013_member_initial_score.py  0014_alter_game_points_difference.py  0015_auto_20211227_1602.py  0016_player_availability.py  0017_group_is_egd.py  0018_alter_group_options.py  0019_add_teacher.py  0019_auto_20220110_1822.py  0019_group_teacher.py  0020_alter_group_options.py  0021_player_is_supporter.py  0022_alter_round_options.py  0023_add_country_and_club.py  0024_gameaianalyseupload.py  0025_alter_player_egd_pin.py  (+19 more)
iglo/macmahon/: __init__.py  macmahon.py  optimization.py
iglo/misc/: apps.py  middleware.py  profiling.py  urls.py  views.py
iglo/review/: admin.py  models.py  urls.py  views.py
iglo/static/: main.css
iglo/templates/: 404.html  500.html  base.html  home.html
iglo/timetable/: admin.py  models.py  urls.py  views.py
iglo/utils/: emails.py  exceptions.py
macmahon/: macmahon.py
macmahon/tests/: conftest.py  test_initial_ordering.py  test_macmahon.py  test_scoring.py
(+91 files in other folders)
