[tool.poetry]
name = "iglo"
version = "0.1.0"
description = ""
authors = ["Szaleni Samuraje"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
uWSGI = "^2.0.19"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
factory-boy = "^3.2.0"
django-crispy-forms = "^1.13.0"
crispy-bootstrap5 = "^0.6"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.1"
sentry-sdk = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
