[tool.poetry]
name = "iglo"
version = "0.1.0"
description = ""
authors = ["Szaleni Samuraje"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
uWSGI = "^2.0.19"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
factory-boy = "^3.2.0"
django-crispy-forms = "^1.13.0"
crispy-bootstrap5 = "^0.6"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.1"
sentry-sdk = "^1.4.3"
django-debug-toolbar = "^3.2.2"
django-bootstrap-pagination = "^1.7.1"
django-countries = "^7.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
