[tool.poetry]
name = "iglo"
version = "0.1.0"
description = ""
authors = ["Szaleni Samuraje"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
uWSGI = "^2.0.19"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
factory-boy = "^3.2.0"
django-crispy-forms = "^1.13.0"
crispy-bootstrap5 = "^0.6"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.1"
sentry-sdk = "^1.4.3"
django-debug-toolbar = "^3.2.2"
django-countries = "^7.2.1"
celery = "^5.2.3"
redis = "^4.1.3"
djangorestframework = "^3.14.0"
drf-extensions = "^0.7.1"
accurating = "^0.5.0"
urllib3 = "1.26.15"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
